Remove `--add-opens=java.base/java.nio=ALL-UNNAMED` from BigQuery